@startuml Diagrama de Classes
title Diagrama de Classes de Domínio | Coinsage - Sprint 5

class User{
    - id: Integer
    - name: String
    - email: String
    - password: String
}

class WalletTransaction {
    + uudi: UUID
    - quantity: Numeric
    - amount: Numeric
    - date: DateTime
    - price_on_purchase: Numeric
}

class Cryptocurrency {
    + uuid: UUID
    - symbol: String
    - cmc_id: Integer
    - cmc_slug: String
    - logo: String
    - name: String
    - description: String
    - technical_doc: List[String]
    - urls: List[String]
    - created_at: DateTime
    - last_update: DateTime
}

class CurrencyInfoSchedule {
    + id: Integer
    - last_update_time: DateTime
    - next_scheduled_time: DateTime
}

class Sector {
    + uuid: UUID
    - name: String
    - title: String
    - coins_quantity: Integer
    - cmc_id: String
    - active: Boolean
}

class SectorInfoSchedule {
    + id: Integer
    - last_update_time: DateTime
    - next_scheduled_time: DateTime
}

class Analysis {
    + uuid: UUID
    - date: DateTime
    - ended: Boolean
}

class AnalysisInfoSchedule {
    + id: Integer
    - uuid_analysis: UUID
    - last_update_time: DateTime
    - next_scheduled_time: DateTime
}

class FirstStageAnalysis {
    + uuid: UUID
    - uuid_analysis: UUID
    - currency: string
    - ranking: Integer
    - market_cap: Numeric
    - week_increase_percentage: Numeric
    - increase_date: DateTime
    - closing_price: Numeric
    - last_week_closing_price: Numeric
    - open_price: Numeric
    - ema8: Numeric
    - ema8_greater_open: Boolean
    - ema8_less_close: Boolean
    - week_increase_volume: Numeric
    - increase_volume_day: DateTime
    - increase_volume: Numeric
    - today_volume: Numeric
    - volume_before_increase: Numeric
    - volumes_relation: Numeric
    - expressive_volume_increase: Boolean
    - ema_aligned: Boolean
    - buying_signal: Boolean
    - today: DateTime
}

class CryptoRanking {
    - uuid: UUID
    - symbol: String
    - market_cap: Numeric
    - closing_price: Numeric
    - ranking_value: Numeric
}

' Relações entre as classes
User "1" -- "*" WalletTransaction : "has"
WalletTransaction "1" -- "1" Cryptocurrency : "has"
Cryptocurrency "1" -- "*" CurrencyInfoSchedule: schedules
Cryptocurrency "1" -- "0..*" Sector
Sector "1" -- "*" SectorInfoSchedule : schedules
Cryptocurrency "1" -- "0..*" Analysis
Analysis "1" -- "*" AnalysisInfoSchedule : schedules
Analysis "1" -- "*" FirstStageAnalysis : includes
Cryptocurrency "1" -- "*" CryptoRanking : "has ranking"

@enduml
